// Vitest Snapshot v1

exports[`Radio component > renders a disabled radio button 1`] = `
<div>
  <div
    class="c-iSwBqf"
    dir="ltr"
    role="radiogroup"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="c-hXfYPB"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component > renders a radio button 1`] = `
<div>
  <div
    class="c-iSwBqf"
    dir="ltr"
    role="radiogroup"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-checked="false"
      aria-label="indicator"
      class="c-hXfYPB"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;
